[gd_scene load_steps=13 format=3 uid="uid://dno63lrxyfvjg"]

[ext_resource type="Texture2D" uid="uid://epjic4c5eaj2" path="res://assets/enemies/golem/Golem_IdleA.png" id="2_jtxbi"]
[ext_resource type="Script" path="res://src/enemies/turret.gd" id="2_npvbm"]
[ext_resource type="PackedScene" uid="uid://clpvbb5flgssm" path="res://src/weapons/weapon_holder.tscn" id="3_bevx6"]
[ext_resource type="Script" path="res://src/weapons/weapon.gd" id="4_i42q4"]
[ext_resource type="PackedScene" uid="uid://bguhqwqpcn6yo" path="res://src/projectiles/projectile_enemy.tscn" id="5_wqmu4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3lxdt"]
size = Vector2(18, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxo5v"]
atlas = ExtResource("2_jtxbi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x0y1"]
atlas = ExtResource("2_jtxbi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv180"]
atlas = ExtResource("2_jtxbi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3lww"]
atlas = ExtResource("2_jtxbi")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_elaa7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxo5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x0y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv180")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3lww")
}],
"loop": true,
"name": &"idle_a",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0i5yx"]
radius = 121.0

[node name="Turret" type="CharacterBody2D"]
z_index = 1
collision_layer = 9
script = ExtResource("2_npvbm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_3lxdt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_elaa7")
animation = &"idle_a"
autoplay = "idle_a"
frame_progress = 0.0517276

[node name="WeaponHolder" parent="." node_paths=PackedStringArray("current_weapon") instance=ExtResource("3_bevx6")]
current_weapon = NodePath("TurretWeapon")

[node name="TurretWeapon" type="Node2D" parent="WeaponHolder" node_paths=PackedStringArray("weapon_tip")]
script = ExtResource("4_i42q4")
PROJECTILE = ExtResource("5_wqmu4")
weapon_tip = NodePath("WeaponTip")

[node name="WeaponTip" type="Marker2D" parent="WeaponHolder/TurretWeapon"]
position = Vector2(9, 0)

[node name="AttackSpeed" type="Timer" parent="WeaponHolder/TurretWeapon"]
wait_time = 1.4

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0i5yx")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 122)
collision_mask = 3

[connection signal="timeout" from="WeaponHolder/TurretWeapon/AttackSpeed" to="WeaponHolder/TurretWeapon" method="_on_attack_speed_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
